<resources>
    <string name="app_name">Money Manager</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_chart">Biểu đồ</string>
    <string name="nav_category">Danh mục</string>
    <string name="nav_reminder">Nhắc nhở</string>
    <string name="nav_currency">Tiền tệ</string>
    <string name="nav_setting">Cài đặt</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
</resources>